--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
+	<title>DESCO Analytics Ltd.</title>
+	<link rel="shortcut icon"  href="favicon.ico" />
+	<link rel="image_src" href="desco_logo_text_2_s.png" />
 </head>
 <body >
 <img style="position: fixed;
