--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
     top: 50%;
     z-index: 2;
     height: 200px;
-    margin-top: -100px;
+    margin-top: -150px;
     width: 629px;
-	margin-left: -315px;" class="logo2" src="desco_logo_text_2_s.png"/></a>
+	margin-left: -315px;" class="logo2" src="desco_logo_text_2_s.png"/>
+<a href="mailto:info@descoanalytics.com" style="position: fixed;
+    left: 50%;
+    top: 50%;
+    z-index: 2;
+    height: 200px;
+    margin-top: 180px;
+    width: 629px;
+    text-align: center;
+    font-family:'Verdana';
+    text-decoration: none;
+    color:#083b66;
+    font-size: 20px;
+    margin-left: -315px;" />info@descoanalytics.com</a>
 </body>
 </html>
