--- a/new/index.html
+++ b/new/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Parallax, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>DESCO Analyics | Blockchain-backed Energy Intelligence</title>
+    <title>DESCO Analyics | Energy Intelligence built on Trust</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -26,18 +26,19 @@
   <body>
 
     <!-- Header Section Start -->
-    <header id="hero-area" data-stellar-background-ratio="0.5">    
+	  <header id="hero-area" data-stellar-background-ratio="0.5">    
       <video style="position: absolute; left:0px; top:0px; width: 100%; z-index=-99;"
-		    autoplay=true loop=true src="vid/3.mp4">
-		</video>
-	  <div style="position: absolute; left:0px; top:0px; width: 100%; height: 100%; z-index=98; background-color: rgba(0,0,0,0.5);">
-		</div>
-      <!-- Navbar Start -->
+        autoplay=true loop=true src="vid/5b.mp4">
+        <!--https://www.youtube.com/watch?v=MehHxycGYrQ-->
+      </video>
+      <div style="position: absolute; left:0px; top:0px; width: 100%; height: 100%; z-index=98; background-color: rgba(0,0,0,0.6);">
+      </div>  
+        <!-- Navbar Start -->
       <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <a href="index.html" class="navbar-brand"><img class="img-fulid" id="lightlogo" src="img/d2.png" alt=""></a>
+            <a href="index.html" class="navbar-brand"><img class="img-fulid" id="lightlogo" src="img/desco_logo_small.png" style="padding-top:20px !important; filter: brightness(1.3);" alt=""></a>
             <a href="index.html" class="navbar-brand"><img class="img-fulid" id="darklogo" style='display:none;margin-top:-20px;' src="img/logo_s2.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
               <i class="lnr lnr-menu"></i>
@@ -109,7 +110,7 @@
           <div class="col-md-10">
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">DESCO Analytics</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Blockchain-backed energy intelligence</p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Energy Intelligence built on Trust</p>
               <a href="#services" class="btn btn-common wow fadeInUp page-scroll" data-wow-duration="1000ms" data-wow-delay="400ms">Learn more</a>
             </div>
           </div>
@@ -233,7 +234,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/jan.jpg" alt="">
+              <img src="img/team/jan1.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Jan Bastiaans</h4>
@@ -248,7 +249,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/steffen.jpg" alt="">
+              <img src="img/team/steffen1.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Steffen Schlueter</h4>
@@ -263,10 +264,10 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img class="img-fulid" src="img/team/mike.jpg" alt="">
+              <img class="img-fulid" src="img/team/mike1.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Michael Harding</h4>
+                  <h4 class="team-title">Mike Harding</h4>
                   <p>Chief Technical Officer</p>
                   <ul class="social-list">
                     <li class="email"><a href="#"><i class="fa fa-envelope"></i></a></li>
@@ -278,7 +279,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/denes.jpg" alt="">
+              <img src="img/team/denes1.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">                  
                   <h4 class="team-title">Dénes Csala</h4>
@@ -370,7 +371,7 @@ Dénes hails from Transylvania, and holds an MSc in Engineering Systems & Manage
                   <p class="registration">Registered in England: <span>11049246</span></p>
                   <p>Bridge Barn, Tatham, Lancaster, LA2 8NL, United Kingdom </p>
                   <p class="phone">Phone: <span>+44 7398 483 468</span></p>
-                  <p class="email">E-mail: <span>info@descoanalyitcs.com</span></p>
+                  <p class="email">E-mail: <span>info@descoanalytics.com</span></p>
                 </div>
                 <div class="social-icons">
                   <ul>
