--- a/new/index.html
+++ b/new/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Parallax, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>DESCO Analyics | Energy Intelligence built on Trust</title>
+    <title>DESCO Analytics | energy management intelligence</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -27,11 +27,12 @@
 
     <!-- Header Section Start -->
 	  <header id="hero-area" data-stellar-background-ratio="0.5">    
+      <img style="position: absolute; left:0px; top:0px; width: 100%; z-index=-100;" src="img/bg.jpg"/>
       <video style="position: absolute; left:0px; top:0px; width: 100%; z-index=-99;"
         autoplay=true loop=true src="vid/5b.mp4">
         <!--https://www.youtube.com/watch?v=MehHxycGYrQ-->
       </video>
-      <div style="position: absolute; left:0px; top:0px; width: 100%; height: 100%; z-index=98; background-color: rgba(0,0,0,0.6);">
+      <div style="position: absolute; left:0px; top:0px; width: 100%; height: 100%; z-index=-98; background-color: rgba(0,0,0,0.6);">
       </div>  
         <!-- Navbar Start -->
       <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
@@ -110,7 +111,7 @@
           <div class="col-md-10">
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">DESCO Analytics</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Energy Intelligence built on Trust</p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">energy management intelligence<br>built on trust&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; backed by data</p>
               <a href="#services" class="btn btn-common wow fadeInUp page-scroll" data-wow-duration="1000ms" data-wow-delay="400ms">Learn more</a>
             </div>
           </div>
