--- a/new/index.html
+++ b/new/index.html
@@ -27,10 +27,12 @@
 
     <!-- Header Section Start -->
 	  <header id="hero-area" data-stellar-background-ratio="0.5">    
-      <img style="position: absolute; left:0px; top:0px; width: 100%; z-index=-100;" src="img/bg.jpg"/>
-      <video style="position: absolute; left:0px; top:0px; width: 100%; z-index=-99;"
+      <img style="position: absolute; left:0px; top:0px; min-width: 100%;
+  min-height: 100%; z-index=-100;" src="img/bg.jpg"/>
+      <!--https://www.youtube.com/watch?v=MehHxycGYrQ-->
+      <video style="position: absolute; left:0px; top:0px; min-width: 100%;
+  min-height: 100%; z-index=-99;"
         autoplay=true loop=true src="vid/5b.mp4">
-        <!--https://www.youtube.com/watch?v=MehHxycGYrQ-->
       </video>
       <div style="position: absolute; left:0px; top:0px; width: 100%; height: 100%; z-index=-98; background-color: rgba(0,0,0,0.6);">
       </div>  
