--- a/new/index.html
+++ b/new/index.html
@@ -41,7 +41,7 @@
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <a href="index.html" class="navbar-brand"><img class="img-fulid" id="lightlogo" src="img/desco_logo_small.png" style="padding-top:20px !important; filter: brightness(1.3);" alt=""></a>
+            <a href="index.html" class="navbar-brand"><img class="img-fulid" id="lightlogo" src="img/desco_logo100.png" style="padding-top:20px !important; filter: brightness(1.3);" alt=""></a>
             <a href="index.html" class="navbar-brand"><img class="img-fulid" id="darklogo" style='display:none;margin-top:-20px;' src="img/logo_s2.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
               <i class="lnr lnr-menu"></i>
