--- a/new/form.html
+++ b/new/form.html
@@ -14,18 +14,23 @@ body {
 }
 
 html {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 p {
   font-size: 18px;
   line-height: 26px;
   text-align: center;
+  overflow:hidden;
 }
 h1 {
   font-size: 28px;
   line-height: 46px;
   text-align: center;
+  overflow:hidden;
+}
+form {
+  overflow:hidden;
 }
 .form-control input,textarea {
   width: 90%;
