--- a/new/index.html
+++ b/new/index.html
@@ -373,7 +373,7 @@
                   <p>DESCO Analytics Ltd. is a limited company registered in England and Wales.</p>
                   <p>Registered Office: <span>Bridge Barn, Tatham, LA2 8NL, Lancaster, United Kingdom</span></p>
                   <p class="registration">Company Number: <span>11049246</span></p>
-                  <p>VAT Registration: <span>N/A</span></p>
+                  <!--<p>VAT Registration: <span>N/A</span></p>-->
                   <p class="phone">Phone: <span><a href="callto:+44 7398 483 468">+44 7398 483 468</a></span></p>
                   <p class="email">E-mail: <span><a href="mailto:info@descoanalytics.com">info@descoanalytics.com</a></span></p>
                   <p class="web">Web: <span><a href="https://www.descoanalytics.com">www.descoanalytics.com</a></span></p>
