--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@ body {
 }
 
 html {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 p {
@@ -92,6 +92,6 @@ h1 {
 <input name="_replyto" type="email" placeholder="Your email">
 <input name="_next" value="https://www.descoanalytics.com/tx.html" type="text" style="display:none;"></input>
 <input name="_gotcha" type="text" style="display:none;"></input>
-<textarea name="message" placeholder="Your message" style="height:160px;"></textarea>
-<button class="btn btn-common" type="submit" style="margin-top: 35px;">Send</button>
+<textarea name="message" placeholder="Your message" style="height:130px;"></textarea>
+<button class="btn btn-common" type="submit" style="margin-top: 5px;">Send</button>
 </form>
